--- a/public/modules/core/views/home.client.view.html
+++ b/public/modules/core/views/home.client.view.html
@@ -1,4 +1,7 @@
 <section data-ng-controller="HomeController">
+	<script src='/path/to/lodash[.min].js'></script>
+	<script src='/path/to/angular-google-maps[.min].js'></script>
+	<script src='//maps.googleapis.com/maps/api/js?sensor=false'></script>
 	<div class="jumbotron text-center">
 		<div class="row">
 			<div class="col-md-6 col-md-offset-3 col-sm-6 col-sm-offset-3 col-xs-12">
