Multiple Button Links to various web pages, basic infrastructure set up for retrieving data from the back end to the web page via AngularJS

--- a/public/modules/core/views/header.client.view.html
+++ b/public/modules/core/views/header.client.view.html
@@ -7,6 +7,8 @@
 			<span class="icon-bar"></span>
 		</button>
 		<a href="/#!/" class="navbar-brand">that-local-sound</a>
+		<a href="/#!/dashboard/" class="navbar-brand">Dashboard</a>
+		<a href="/#!/dashboard/profile" class="navbar-brand">Dashboard - Profile</a>
 	</div>
 	<nav class="collapse navbar-collapse" collapse="!isCollapsed" role="navigation">
 		<ul class="nav navbar-nav" data-ng-if="menu.shouldRender(authentication.user);">
