--- a/public/modules/browse/views/browse.client.view.html
+++ b/public/modules/browse/views/browse.client.view.html
@@ -1,1 +1,17 @@
-<h1>hello world</h1>
+<section data-ng-controller="BrowseController" data-ng-init="find()">
+  <div class="page-header">
+    <h1>Users</h1>
+  </div>
+  <div class="list-group">
+    <a data-ng-repeat="user in users" data-ng-href="#!/users/{{user._id}}" class="list-group-item">
+      <small class="list-group-item-text">
+        This is a suser
+        <span data-ng-bind="user.created | date:'mediumDate'"></span>
+        by
+        <span data-ng-bind="user.displayName"></span>
+      </small>
+      <h4 class="list-group-item-heading" data-ng-bind="user.email"></h4>
+      <p class="list-group-item-text" data-ng-bind="user"></p>
+    </a>
+  </div>
+</section>
