--- a/public/modules/users/views/authentication/signup.client.view.html
+++ b/public/modules/users/views/authentication/signup.client.view.html
@@ -32,9 +32,14 @@
 						<label for="firstName">First Name</label>
 						<input type="text" required id="firstName" name="firstName" class="form-control" data-ng-model="credentials.firstName" placeholder="First Name">
 					</div>
+
 					<div class="form-group">
 						<label for="lastName">Last Name</label>
 						<input type="text" id="lastName" name="lastName" class="form-control" data-ng-model="credentials.lastName" placeholder="Last Name">
+					</div>
+					<div class="form-group">
+						<label for="username">Username</label>
+						<input type="text" required id="username" name="username" class="form-control" data-ng-model="credentials.username" placeholder="Username">
 					</div>
 					<div class="form-group">
 						<label for="email">Email</label>
@@ -66,6 +71,10 @@
 					<div class="form-group">
 						<label for="lastName">Last Name</label>
 						<input type="text" id="lastName" name="lastName" class="form-control" data-ng-model="credentials.lastName" placeholder="Last Name">
+					</div>
+					<div class="form-group">
+						<label for="username">Username</label>
+						<input type="text" required id="username" name="username" class="form-control" data-ng-model="credentials.username" placeholder="Username">
 					</div>
 					<div class="form-group">
 						<label for="email">Email</label>
