--- a/public/modules/users/views/authentication/signup.client.view.html
+++ b/public/modules/users/views/authentication/signup.client.view.html
@@ -46,8 +46,8 @@
 						<input type="email" id="email" name="email" class="form-control" data-ng-model="credentials.email" placeholder="Email">
 					</div>
 					<div class="form-group">
-						<label for="user.userType.artist.stagename">Stage Name</label>
-						<input type="text" id="user.userType.artist.stagename" name="user.userType.artist.stagename" class="form-control" data-ng-model="credentials.user.userType.artist.stagename" placeholder="Stage Name">
+						<label for="user.userType[{arist.stagename}]">Stage Name</label>
+						<input type="text" id="user.userType[{arist.stagename}]" name="user.userType[{arist.stagename}]" class="form-control" data-ng-model="credentialsuser.userType[{arist.stagename}]" placeholder="Stage Name">
 					</div>
 					<div class="form-group">
 						<label for="password">Password</label>
