--- a/public/modules/core/views/header.client.view.html
+++ b/public/modules/core/views/header.client.view.html
@@ -7,11 +7,11 @@
 			<span class="icon-bar"></span>
 		</button>
 		<a href="/#!/" class="navbar-brand">that-local-sound</a>
-		<a href="/#!/browse/users" class="navbar-brand">Browse</a>
-		<a href="/#!/dashboard/" class="navbar-brand">Dashboard</a>
-		<a href="/#!/dashboard/profile" class="navbar-brand">Profile</a>
-		<a href="/#!/dashboard/inbox" class="navbar-brand">Inbox</a>
-		<a href="/#!/dashboard/request" class="navbar-brand">Request</a>
+		<a href="/#!/browse/" class="navbar-brand">Browse</a>
+	<!-- 	<a href="/#!/dashboard/" class="navbar-brand">Dashboard</a>
+	<a href="/#!/dashboard/profile" class="navbar-brand">Profile</a>
+	<a href="/#!/dashboard/inbox" class="navbar-brand">Inbox</a>
+	<a href="/#!/dashboard/request" class="navbar-brand">Request</a> -->
 	</div>
 	<nav class="collapse navbar-collapse" collapse="!isCollapsed" role="navigation">
 		<ul class="nav navbar-nav" data-ng-if="menu.shouldRender(authentication.user);">
