--- a/public/modules/browse/views/browse.client.view.html
+++ b/public/modules/browse/views/browse.client.view.html
@@ -1,13 +1,14 @@
 <section data-ng-controller="BrowseController" data-ng-init="find()">
   <div class="page-header">
     <h1>Users</h1>
+    <h2> i put stuff here </h2>
   </div>
   <div class="list-group">
-    <a data-ng-repeat="user in users" data-ng-href="#!/users/{{user._id}}" class="list-group-item">
+    <a data-ng-repeat="user in users" data-ng-href="#!/users/" class="list-group-item">
       <small class="list-group-item-text">
-        This is a suser
-        <span data-ng-bind="user.created | date:'mediumDate'"></span>
-        by
+        This is a user
+        <!-- <span data-ng-bind="user.created | date:'mediumDate'"></span> -->
+        display name
         <span data-ng-bind="user.displayName"></span>
       </small>
       <h4 class="list-group-item-heading" data-ng-bind="user.email"></h4>
