--- a/public/modules/browse/views/browse.client.view.html
+++ b/public/modules/browse/views/browse.client.view.html
@@ -6,13 +6,13 @@
   <div class="list-group">
     <a data-ng-repeat="user in users" data-ng-href="#!/users/" class="list-group-item">
       <small class="list-group-item-text">
-        This is a user
+
         <!-- <span data-ng-bind="user.created | date:'mediumDate'"></span> -->
-        display name
-        <span data-ng-bind="user.displayName"></span>
+
+        <span data-ng-bind="user.stageName"></span>
       </small>
       <h4 class="list-group-item-heading" data-ng-bind="user.email"></h4>
-      <p class="list-group-item-text" data-ng-bind="user"></p>
+      <h5 class="list-grou-item-heading" data-ng-bind="user.stageName"></h4>
     </a>
   </div>
 </section>
