--- a/public/modules/core/views/home.client.view.html
+++ b/public/modules/core/views/home.client.view.html
@@ -1,7 +1,7 @@
 <section data-ng-controller="HomeController">
 	<script src='/path/to/lodash[.min].js'></script>
 	<script src='/path/to/angular-google-maps[.min].js'></script>
-	<script src='//maps.googleapis.com/maps/api/js?sensor=false'></script>
+	<script src='//maps.googleapis.com/maps/api/js?sensor=true'></script>
 	<div class="row">
 	</div>
 	<div class="jumbotron text-center">
@@ -16,8 +16,13 @@
 			</p>
 		</div>
 	</div>
+
+	<div class = "geolocation text-center">
+	<p><button onclick="geoFindMe()">Show my location</button></p>
+	<div id="out"></div>
+
 	<div>
-		<h1>This is where the carousel goes</hi>
+		<h1>This is where the carousel goes</h1>
 	</div>
 	<div class="row">
 			 <div class="col-md-4 text-center">
