--- a/public/modules/core/views/header.client.view.html
+++ b/public/modules/core/views/header.client.view.html
@@ -6,13 +6,14 @@
 			<span class="icon-bar"></span>
 			<span class="icon-bar"></span>
 		</button>
-		<a href="/#!/" class="navbar-brand">that-local-sound</a>
+		<a href="/#!/" class="navbar-brand">That-Local-Sound</a>
 		<a href="/#!/browse/" class="navbar-brand">Browse</a>
 		<a href="/#!/dashboard/" class="navbar-brand">Dashboard</a>
 		<a href="/#!/dashboard/profile" class="navbar-brand">Profile</a>
 		<a href="/#!/dashboard/inbox" class="navbar-brand">Inbox</a>
 		<a href="/#!/dashboard/request" class="navbar-brand">Request</a>
 	</div>
+
 	<nav class="collapse navbar-collapse" collapse="!isCollapsed" role="navigation">
 		<ul class="nav navbar-nav" data-ng-if="menu.shouldRender(authentication.user);">
 			<li data-ng-repeat="item in menu.items | orderBy: 'position'" data-ng-if="item.shouldRender(authentication.user);" ng-switch="item.menuItemType" ui-route="{{item.uiRoute}}" class="{{item.menuItemClass}}" ng-class="{active: ($uiRoute)}" dropdown="item.menuItemType === 'dropdown'">
@@ -59,5 +60,24 @@
 				</ul>
 			</li>
 		</ul>
+
 	</nav>
 </div>
+<head>
+	<meta charset="utf-8">
+	<title>GeoLocation</title>
+
+	<style>
+		html, body, #map {
+			margin: 0;
+			padding: 0;
+			height: 100%;
+		}
+	</style>
+</head>
+<body>
+	<div id="map"></div>
+
+	<script src="https://maps.googleapis.com/maps/api/js?v=3.exp&sensor=false"></script>
+	<script src="script.js"></script>
+</body>
