still have a lot of work to do

--- a/public/modules/browse/views/browse.client.view.html
+++ b/public/modules/browse/views/browse.client.view.html
@@ -1,20 +1,26 @@
 <section data-ng-controller="BrowseController" data-ng-init="find()">
   <div class="page-header">
-    <h1>Users</h1>
-    <h2> i put stuff here </h2>
+    <h1>Artists</h1>
+    <h2>Browse our Local pool of talent!</h2>
   </div>
   <div class="list-group">
-    <a data-ng-repeat="user in users" data-ng-href="#!/users/" class="list-group-item">
+    <a data-ng-repeat="user in users" data-ng-href="#!/users/{{user.id}}" class="list-group-item">
       <div>
         <img src="http://placehold.it/70x70" class="avatar img-circle" alt="avatar">
+        <h2 class="list-group-item-heading" data-ng-bind="user.displayName"></h2>
+          <h4 class="list-group-item-heading" data-ng-bind="user.stageName"></h4>
         <p>Signed up:
           <span data-ng-bind="user.created | date:'mediumDate'"></span>
         </p>
       </div>
       <div>
         <h4 class="list-group-item-heading" data-ng-bind="user.email"></h4>
-        <h5 class="list-group-item-heading" data-ng-bind="user.stageName"></h4>
+
+        <h5 class="list-group-item" data-ng-bind="user.bio"></h5>
       </div>
     </a>
+  </div>
+  <div class="alert alert-warning text-center" data-ng-if="users.$resolved && !users.length">
+    No artist yet, tell your muscian friends to sign up <a href="/#!/users/signup">?
   </div>
 </section>
