--- a/public/modules/core/views/header.client.view.html
+++ b/public/modules/core/views/header.client.view.html
@@ -8,12 +8,15 @@
 		</button>
 		<a href="/#!/" class="navbar-brand">that-local-sound</a>
 		<a href="/#!/browse/" class="navbar-brand">Browse</a>
+		<a href="/#!/profile/" class="navbar-brand">Profile</a>
 	<!-- 	<a href="/#!/dashboard/" class="navbar-brand">Dashboard</a>
 	<a href="/#!/dashboard/profile" class="navbar-brand">Profile</a>
 	<a href="/#!/dashboard/inbox" class="navbar-brand">Inbox</a>
 	<a href="/#!/dashboard/request" class="navbar-brand">Request</a> -->
+
 	</div>
 	<nav class="collapse navbar-collapse" collapse="!isCollapsed" role="navigation">
+
 		<ul class="nav navbar-nav" data-ng-if="menu.shouldRender(authentication.user);">
 			<li data-ng-repeat="item in menu.items | orderBy: 'position'" data-ng-if="item.shouldRender(authentication.user);" ng-switch="item.menuItemType" ui-route="{{item.uiRoute}}" class="{{item.menuItemClass}}" ng-class="{active: ($uiRoute)}" dropdown="item.menuItemType === 'dropdown'">
 				<a ng-switch-when="dropdown" class="dropdown-toggle">
@@ -40,11 +43,17 @@
 		<ul class="nav navbar-nav navbar-right" data-ng-show="authentication.user">
 			<li class="dropdown">
 				<a href="#" class="dropdown-toggle" data-toggle="dropdown">
-					<span data-ng-bind="authentication.user.displayName"></span> <b class="caret"></b>
+					Dashboard <b class="caret"></b>
 				</a>
 				<ul class="dropdown-menu">
 					<li>
-						<a href="/#!/settings/profile">Edit Profile</a>
+						<a href="/#!/settings/profile">Edit AccountInfo</a>
+					</li>
+					<li>
+						<a href="/#!/">Inbox</a>
+					</li>
+					<li>
+						<a href="/#!/">Requests</a>
 					</li>
 					<li>
 						<a href="/#!/settings/accounts">Manage Social Accounts</a>
