--- a/public/modules/core/views/header.client.view.html
+++ b/public/modules/core/views/header.client.view.html
@@ -1,57 +1,79 @@
 <div class="container" data-ng-controller="HeaderController">
-	<div class="navbar-header">
-		<button class="navbar-toggle" type="button" data-ng-click="toggleCollapsibleMenu()">
-			<span class="sr-only">Toggle navigation</span>
-			<span class="icon-bar"></span>
-			<span class="icon-bar"></span>
-			<span class="icon-bar"></span>
-		</button>
-		<a href="/#!/" class="navbar-brand">that-local-sound</a>
-		<a href="/#!/browse/" class="navbar-brand">Browse</a>
-		<a href="/#!/profile/" class="navbar-brand">Profile</a>
-	<!-- 	<a href="/#!/dashboard/" class="navbar-brand">Dashboard</a>
-	<a href="/#!/dashboard/profile" class="navbar-brand">Profile</a>
-	<a href="/#!/dashboard/inbox" class="navbar-brand">Inbox</a>
-	<a href="/#!/dashboard/request" class="navbar-brand">Request</a> -->
-
+	<div class="container-fluid">
+		<!-- Brand and toggle get grouped for better mobile display -->
+		<div class="navbar-header">
+			<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+				<span class="sr-only">Toggle navigation</span>
+				<span class="icon-bar"></span>
+				<span class="icon-bar"></span>
+				<span class="icon-bar"></span>
+			</button>
+			<a class="navbar-brand" href="/#!/">That-Local-Sound</a>
+		</div>
+		<!-- Collect the nav links, forms, and other content for toggling -->
+		<nav class="collapse navbar-collapse" collapse="!isCollapsed" role="navigation">
+			<ul class="nav navbar-nav navbar-right" data-ng-hide="authentication.user">
+				<li ui-route="/signup" ng-class="{active: $uiRoute}">
+					<a href="/#!/signup">Sign Up</a>
+				</li>
+				<li class="divider-vertical"></li>
+				<li ui-route="signin" ng-class="{active: $uiRoute}">
+					<a href="/#!/signin">Sign In</a>
+				</li>
+			</ul>
+			<ul class="nav navbar-nav navbar-right" data-ng-show="authentication.user">
+				<li><a href="#">Browse</a></li>
+				<li class ="dropdown">
+					<a href="#" class="dropdown-toggle" data-toggle="dropdown">Dashboard<b class="caret"></b>
+					</a>
+					<ul class="dropdown-menu">
+						<li>
+							<a href="/auth/signout">Signout</a>
+						</li>
+					</ul>
+				</li>
+			</ul>
+		</nav>
 	</div>
-	<nav class="collapse navbar-collapse" collapse="!isCollapsed" role="navigation">
-		<ul class="nav navbar-nav navbar-right" data-ng-hide="authentication.user">
-			<li ui-route="/signup" ng-class="{active: $uiRoute}">
-				<a href="/#!/signup">Sign Up</a>
-			</li>
-			<li class="divider-vertical"></li>
-			<li ui-route="/signin" ng-class="{active: $uiRoute}">
-				<a href="/#!/signin">Sign In</a>
-			</li>
-		</ul>
-		<ul class="nav navbar-nav navbar-right" data-ng-show="authentication.user">
-			<li class="dropdown">
-				<a href="#" class="dropdown-toggle" data-toggle="dropdown">
-					Dashboard <b class="caret"></b>
-				</a>
-				<ul class="dropdown-menu">
-					<li>
-						<a href="/#!/settings/profile">Edit AccountInfo</a>
-					</li>
-					<li>
-						<a href="/#!/">Inbox</a>
-					</li>
-					<li>
-						<a href="/#!/">Requests</a>
-					</li>
-					<li>
-						<a href="/#!/settings/accounts">Manage Social Accounts</a>
-					</li>
-					<li data-ng-show="authentication.user.provider === 'local'">
-						<a href="/#!/settings/password">Change Password</a>
-					</li>
-					<li class="divider"></li>
-					<li>
-						<a href="/auth/signout">Signout</a>
-					</li>
-				</ul>
-			</li>
-		</ul>
-	</nav>
+	<!--<nav class="collapse navbar-collapse" collapse="!isCollapsed" role="navigation">-->
+		<!--<ul class="nav navbar-nav navbar-right" data-ng-hide="authentication.user">-->
+			<!--<li ui-route="/signup" ng-class="{active: $uiRoute}">-->
+				<!--<a href="/#!/signup">Sign Up</a>-->
+			<!--</li>-->
+			<!--<li class="divider-vertical"></li>-->
+			<!--<li ui-route="/signin" ng-class="{active: $uiRoute}">-->
+				<!--<a href="/#!/signin">Sign In</a>-->
+			<!--</li>-->
+		<!--</ul>-->
+		<!--<ul class="nav navbar-nav navbar-right" data-ng-show="authentication.user">-->
+			<!--<li class="dropdown">-->
+				<!--<a href="#" class="dropdown-toggle" data-toggle="dropdown">-->
+					<!--Dashboard <b class="caret"></b>-->
+				<!--</a>-->
+				<!--<ul class="dropdown-menu">-->
+					<!--<li>-->
+						<!--<a href="/#!/settings/profile">Edit AccountInfo</a>-->
+					<!--</li>-->
+					<!--<li>-->
+						<!--<a href="/#!/">Inbox</a>-->
+					<!--</li>-->
+					<!--<li>-->
+						<!--<a href="/#!/">Requests</a>-->
+					<!--</li>-->
+					<!--<li>-->
+						<!--<a href="/#!/settings/accounts">Manage Social Accounts</a>-->
+					<!--</li>-->
+					<!--<li data-ng-show="authentication.user.provider === 'local'">-->
+						<!--<a href="/#!/settings/password">Change Password</a>-->
+					<!--</li>-->
+					<!--<li class="divider"></li>-->
+					<!--<li>-->
+						<!--<a href="/auth/signout">Signout</a>-->
+					<!--</li>-->
+				<!--</ul>-->
+			<!--</li>-->
+		<!--</ul>-->
+	<!--</nav>-->
+
+
 </div>
