--- a/public/modules/core/views/header.client.view.html
+++ b/public/modules/core/views/header.client.view.html
@@ -22,9 +22,9 @@
 				</li>
 			</ul>
 			<ul class="nav navbar-nav navbar-right" data-ng-show="authentication.user">
-				<li><a href="#">Browse</a></li>
+				<li><a href="/#!/browse/">Browse</a></li>
 				<li class ="dropdown">
-					<a href="#" class="dropdown-toggle" data-toggle="dropdown">Dashboard<b class="caret"></b>
+					<a href="/#!/dashboard/" class="dropdown-toggle" data-toggle="dropdown">Dashboard<b class="caret"></b>
 					</a>
 					<ul class="dropdown-menu">
 						<li>
