Fixed the Browse to only appear if you are logged in.

--- a/public/modules/core/views/home.client.view.html
+++ b/public/modules/core/views/home.client.view.html
@@ -1,7 +1,4 @@
 <section data-ng-controller="HomeController">
-	<script src='/path/to/lodash[.min].js'></script>
-	<script src='/path/to/angular-google-maps[.min].js'></script>
-	<script src='//maps.googleapis.com/maps/api/js?sensor=false'></script>
 	<div class="row">
 	</div>
 	<div class="jumbotron text-center">
@@ -17,7 +14,7 @@
 		</div>
 	</div>
 	<div>
-		<h1>This is where the carousel goes</hi>
+		<h1>This is where the carousel goes</h1>
 	</div>
 	<div class="row">
 			 <div class="col-md-4 text-center">
