--- a/public/modules/core/views/header.client.view.html
+++ b/public/modules/core/views/header.client.view.html
@@ -23,57 +23,9 @@
 			</ul>
 			<ul class="nav navbar-nav navbar-right" data-ng-show="authentication.user">
 				<li><a href="/#!/browse/">Browse</a></li>
-				<li class ="dropdown">
-					<a href="/#!/dashboard/" class="dropdown-toggle" data-toggle="dropdown">Dashboard<b class="caret"></b>
-					</a>
-					<ul class="dropdown-menu">
-						<li>
-							<a href="/auth/signout">Signout</a>
-						</li>
-					</ul>
-				</li>
+				<li><a href="/#!/dashboard/">Dashboard</a></li>
+				<li><a href="/auth/signout">Sign-out</a></li>
 			</ul>
 		</nav>
 	</div>
-	<!--<nav class="collapse navbar-collapse" collapse="!isCollapsed" role="navigation">-->
-		<!--<ul class="nav navbar-nav navbar-right" data-ng-hide="authentication.user">-->
-			<!--<li ui-route="/signup" ng-class="{active: $uiRoute}">-->
-				<!--<a href="/#!/signup">Sign Up</a>-->
-			<!--</li>-->
-			<!--<li class="divider-vertical"></li>-->
-			<!--<li ui-route="/signin" ng-class="{active: $uiRoute}">-->
-				<!--<a href="/#!/signin">Sign In</a>-->
-			<!--</li>-->
-		<!--</ul>-->
-		<!--<ul class="nav navbar-nav navbar-right" data-ng-show="authentication.user">-->
-			<!--<li class="dropdown">-->
-				<!--<a href="#" class="dropdown-toggle" data-toggle="dropdown">-->
-					<!--Dashboard <b class="caret"></b>-->
-				<!--</a>-->
-				<!--<ul class="dropdown-menu">-->
-					<!--<li>-->
-						<!--<a href="/#!/settings/profile">Edit AccountInfo</a>-->
-					<!--</li>-->
-					<!--<li>-->
-						<!--<a href="/#!/">Inbox</a>-->
-					<!--</li>-->
-					<!--<li>-->
-						<!--<a href="/#!/">Requests</a>-->
-					<!--</li>-->
-					<!--<li>-->
-						<!--<a href="/#!/settings/accounts">Manage Social Accounts</a>-->
-					<!--</li>-->
-					<!--<li data-ng-show="authentication.user.provider === 'local'">-->
-						<!--<a href="/#!/settings/password">Change Password</a>-->
-					<!--</li>-->
-					<!--<li class="divider"></li>-->
-					<!--<li>-->
-						<!--<a href="/auth/signout">Signout</a>-->
-					<!--</li>-->
-				<!--</ul>-->
-			<!--</li>-->
-		<!--</ul>-->
-	<!--</nav>-->
-
-
 </div>
