--- a/public/modules/users/css/users.css
+++ b/public/modules/users/css/users.css
@@ -12,149 +12,126 @@
 	right: 10px;
 	position: absolute;
 }
-@font-face {
-font-family: 'acid_medium';
-src: url('../fonts/acid_medium.otf');
-}
-.input{
-border-radius: 5px;
-border:none;
-}
-.button{
-background-color:white;
-border: none;
-border-radius: 5px;
-color:gray;
-}
-.sidepanel{
-float:left;
-width:20%;
-background-image:url('http://i58.tinypic.com/23r20ky.png');
-text-align:center;
-position:fixed;
-top:container.top;
-left:0;
-height:100vh;
-}
-a{
-color:gray;
-}
-a:hover{
-color:white;
-text-decoration:none;
+/*!
+* Start Bootstrap - Simple Sidebar HTML Template (http://startbootstrap.com)
+* Code licensed under the Apache License v2.0.
+* For details, see http://www.apache.org/licenses/LICENSE-2.0.
+*/
+
+/* Toggle Styles */
+
+#wrapper {
+	padding-left: 0;
+	-webkit-transition: all 0.5s ease;
+	-moz-transition: all 0.5s ease;
+	-o-transition: all 0.5s ease;
+	transition: all 0.5s ease;
 }
 
-
-
-<!--
- * Basic lightbox styles. Notice the
- * default 'display' is 'none'.
--->
-#gallery {
-    width:660px;
-    margin:100px auto;
-    }
- 
-#gallery a {
-    text-decoration:none;
-    }
- 
-#gallery .item {
-    width: 200px; height: 200px; overflow: hidden;
-    float: left;
-    border: 5px solid #333;
-    margin: 5px;
-    }
- 
-#gallery .item a {
-    overflow: hidden;
-    }
- 
-#gallery .item a img {
-    height: 100%;
-    align-self: center;
-    }
- 
-.lightbox {
-    /** Hide the lightbox */
-    display: none;
- 
-    /** Apply basic lightbox styling */
-    position: fixed;
-    z-index: 9999;
-    width: 100%;
-    height: 100%;
-    top: 0;
-    left: 0;
-    color:#333333;
-    }
- 
-.lightbox:target {
-    /** Show lightbox when it is target */
-    display: block;
-    outline: none;
+#wrapper.toggled {
+	padding-left: 250px;
 }
- 
-.lightbox .box {
-    width: -webkit-min-content;
-    width: -moz-min-content;
-    width: min-content;
-    min-width:500px;
-    margin: 2% auto;
-    padding:10px 20px 10px 20px;
-    background-color:#FFF;
-    box-shadow: 0px 1px 26px -3px #777777;
-    }
- 
-.lightbox .title {
-    margin:0;
-    padding:0 0 10px 0px;
-    border-bottom:1px #ccc solid;
-    font-size:22px;
-    }
- 
-.lightbox .content {
-    display:block;
-    position:relative;
-    }
- 
-.lightbox .content .desc {
-    z-index:99;
-    bottom:0;
-    position:absolute;
-    padding:10px;
-    margin:0 0 4px 0;
-    background:rgba(0,0,0,0.8);
- 
-    color:#fff;
-    font-size:17px;
-    opacity:0;
-    transition: opacity ease-in-out 0.5s;
-    }   
- 
-.lightbox .content:hover .desc  {
-    opacity:1;
+
+#sidebar-wrapper {
+	z-index: 1000;
+	position: fixed;
+	left: 250px;
+	width: 0;
+	height: 100%;
+	margin-left: -250px;
+	overflow-y: auto;
+	background: #000;
+	-webkit-transition: all 0.5s ease;
+	-moz-transition: all 0.5s ease;
+	-o-transition: all 0.5s ease;
+	transition: all 0.5s ease;
 }
- 
-.lightbox .next,
-.lightbox .prev,
-.lightbox .close {
-    display:block;
-    text-decoration:none;
-    font-family:Gotham, "Helvetica Neue", Helvetica, Arial, sans-serif;
-    font-size:22px;
-    color:#858585;
-    }
- 
-.prev {
-    float:left;
-    }
- 
-.next, .close {
-    float:right;
-    }
- 
-    .clear {
-        display:block;
-        clear:both;
-        }
+
+#wrapper.toggled #sidebar-wrapper {
+	width: 250px;
+}
+
+#page-content-wrapper {
+	width: 100%;
+	padding: 15px;
+}
+
+#wrapper.toggled #page-content-wrapper {
+	position: absolute;
+	margin-right: -250px;
+}
+
+/* Sidebar Styles */
+
+.sidebar-nav {
+	position: absolute;
+	top: 0;
+	width: 250px;
+	margin: 0;
+	padding: 0;
+	list-style: none;
+}
+
+.sidebar-nav li {
+	text-indent: 20px;
+	line-height: 40px;
+}
+
+.sidebar-nav li a {
+	display: block;
+	text-decoration: none;
+	color: #999999;
+}
+
+.sidebar-nav li a:hover {
+	text-decoration: none;
+	color: #fff;
+	background: rgba(255,255,255,0.2);
+}
+
+.sidebar-nav li a:active,
+.sidebar-nav li a:focus {
+	text-decoration: none;
+}
+
+.sidebar-nav > .sidebar-brand {
+	height: 65px;
+	font-size: 18px;
+	line-height: 60px;
+}
+
+.sidebar-nav > .sidebar-brand a {
+	color: #999999;
+}
+
+.sidebar-nav > .sidebar-brand a:hover {
+	color: #fff;
+	background: none;
+}
+
+@media(min-width:768px) {
+	#wrapper {
+		padding-left: 250px;
+	}
+
+	#wrapper.toggled {
+		padding-left: 0;
+	}
+
+	#sidebar-wrapper {
+		width: 250px;
+	}
+
+	#wrapper.toggled #sidebar-wrapper {
+		width: 0;
+	}
+
+	#page-content-wrapper {
+		padding: 20px;
+	}
+
+	#wrapper.toggled #page-content-wrapper {
+		position: relative;
+		margin-right: 0;
+	}
+}
