--- a/public/modules/browse/views/browse.client.view.html
+++ b/public/modules/browse/views/browse.client.view.html
@@ -27,7 +27,7 @@
   </div>
 
   <div class="list-group">
-    <a data-ng-repeat="user in users | filter:query | orderBy:artistOrder:direction" data-ng-href="#!/browse/{{user.id}" class="list-group-item">
+    <a data-ng-repeat="user in users | filter:query | orderBy:artistOrder:direction" data-ng-href="#!/browse/{{user._id}}" class="list-group-item">
       <div>
         <img src="http://placehold.it/70x70" class="avatar img-circle" alt="avatar">
         <h2 class="list-group-item-heading" data-ng-bind="user.displayName"></h2>
