--- a/app/views/layout.server.view.html
+++ b/app/views/layout.server.view.html
@@ -29,9 +29,9 @@
 		<script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
 	<![endif]-->
 </head>
-<header data-ng-include="'/modules/core/views/header.client.view.html'" class="navbar navbar-fixed-top navbar-inverse"></header>
+<header data-ng-include="'/modules/core/views/header.client.view.html'" class="navbar navbar-fixed-top navbar-inverse">
+	</header>
 <body class="ng-cloak">
-
 	<section class="content">
 		<section class="container">
 			{% block content %}{% endblock %}
