working on the profile views, they won't load, but everything else should work.

--- a/public/modules/core/views/header.client.view.html
+++ b/public/modules/core/views/header.client.view.html
@@ -2,13 +2,7 @@
 	<div class="container-fluid">
 		<!-- Brand and toggle get grouped for better mobile display -->
 		<div class="navbar-header">
-			<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-				<span class="sr-only">Toggle navigation</span>
-				<span class="icon-bar"></span>
-				<span class="icon-bar"></span>
-				<span class="icon-bar"></span>
-			</button>
-			<a class="navbar-brand" href="/#!/">That-Local-Sound</a>
+			<a class="navbar-brand" href="/#!/">That-Local-Sound!</a>
 		</div>
 		<!-- Collect the nav links, forms, and other content for toggling -->
 		<nav class="collapse navbar-collapse" collapse="!isCollapsed" role="navigation">
@@ -23,7 +17,7 @@
 			</ul>
 			<ul class="nav navbar-nav navbar-right" data-ng-show="authentication.user">
 				<li><a href="/#!/browse/">Browse</a></li>
-				<li><a href="/#!/dashboard/">Dashboard</a></li>
+				<li><a  href="/#!/dashboard/">Dashboard</a></li>
 				<li><a href="/auth/signout">Sign-out</a></li>
 			</ul>
 		</nav>
