--- a/public/modules/browse/views/browse.client.view.html
+++ b/public/modules/browse/views/browse.client.view.html
@@ -21,13 +21,13 @@
   </div>
 
   <ul class="artistlist">
-    <a data-ng-repeat="user in users | filter:query | orderBy:artistOrder:direction" data-ng-href="#!/browse/{{user._id}}" class="list-group-item">
+    <a data-ng-repeat="artist in users | filter:query | orderBy:artistOrder:direction" data-ng-href="#!/browse/{{artist._id}}" class="list-group-item">
     <!-- <li class="artist cf" ng-repeat="user in users | filter: query | orderBy: artistOrder:direction"> -->
       <!-- <a href="#/browse/{{user.indexOf(item)}}"> -->
-        <im ng-src="images/{{item.shortname}}_tn.jpg" alt="Photo of {{user.displayName}}">
+        <im ng-src="images/{{item.shortname}}_tn.jpg" alt="Photo of {{artist.displayName}}">
           <div class="info">
-            <h2>{{user.displayName}}</h2>
-            <h3>{{user.email}}</h3>
+            <h2>{{artist.displayName}}</h2>
+            <h3>{{artist.email}}</h3>
             <p></p>
           </div>
       </li>
