--- a/public/modules/browse/views/userProfile.client.view.html
+++ b/public/modules/browse/views/userProfile.client.view.html
@@ -1,12 +1,15 @@
 <section data-ng-controller="BrowseController" data-ng-init="findOne()"/>
-<div ng-cintr>
+<h1><a href="#!/browse/">&laquo; Back to Search</h1>
+<h2>{{artist.displayName}}</h2>
+
+<!-- <div ng-cintr>
 	<div class="sidepanel">
 		<div style="display:inline-block; border-radius:50%;width: 150px; height: 150px; overflow: hidden;margin-top:20px;"><img style="height: 100%;
     align-self: center;" src="https://cdn2.iconfinder.com/data/icons/free-basic-icon-set-2/300/2-128.png"/>
 </div><br><a href="#">More Pictures</a>
 	</div>
 	<div style="float:right;width:85%;">
-		<h1><a href="#!/browse/">&laquo; Back to Search</h1>
+
 		<div data-ng-show="authentication.user"><h1 data-ng-bind="authentication.user.displayName"></h1>
 		<span data-ng-model="user.address.city">Location</span>
 		<div align=right>http://website.com</div>
@@ -24,13 +27,13 @@
 		<br><br>
 		Start time  <input class="input" type="text" name="starttime" size="5">
 		End time  <input class="input" type="text" name="endtime" size="5"><br><br>
-		Payment $ <input class="input" type="text" name="payment" size="7"><br><br>
+		Payment \$ <input class="input" type="text" name="payment" size="7"><br><br>
 		<div style="width:20%;margin:0 auto;"><input class="button" type="submit" value="Submit">
 		</form></div></div>
 
-<!-- thumbnail image wrapped in a link -->
+thumbnail image wrapped in a link
 <section id="gallery">
-    <!-- thumbnail image wrapped in a link -->
+    thumbnail image wrapped in a link
     <section class="item">
         <a href="#img1">
           <img src="http://i58.tinypic.com/23r20ky.png">
@@ -88,5 +91,5 @@
 </div>
 
 
-</div>
+</div> -->
 </section>
