--- a/public/modules/users/views/dashboard/dashboard.client.view.html
+++ b/public/modules/users/views/dashboard/dashboard.client.view.html
@@ -1,19 +1,9 @@
-
-<body>
-  <div id="wrapper">
-    <!-- Sidebar -->
-    <div id="sidebar-wrapper">
-      <ul class="sidebar-nav">
-        <li class="sidebar-brand">
-          <a href="#">
-            Start Bootstrap
-          </a>
-        </li>
-        <li>
-          <a href="!#">Edit Profile</a>
-        </li>
-        <li>
-          <a href="!#"></a>
+ <div id="wrapper">
+   <!-- Sidebar -->
+   <div id="sidebar-wrapper">
+     <ul class="sidebar-nav">
+       <li class="sidebar-brand">
+         <a ui-sref='profile'>Edit Profile</a>
         </li>
         <li>
           <a href="#">Overview</a>
@@ -40,11 +30,10 @@
       <div class="container-fluid">
         <div class="row">
           <div class="col-lg-12">
-            <h1>Simple Sidebar</h1>
-            <p>This template has a responsive menu toggling system. The menu will appear collapsed on smaller screens, and will appear non-collapsed on larger screens. When toggled using the button below, the menu will appear/disappear. On small screens, the page content will be pushed off canvas.</p>
-            <p>Make sure to keep all page content within the <code>#page-content-wrapper</code>.</p>
-            <a href="#menu-toggle" class="btn btn-default" id="menu-toggle">Toggle Menu</a>
-          </div>
+              <section ui-view></section>
+
+<!--             Create partial view here. it will be contianed if created here.
+ -->          </div>
         </div>
       </div>
     </div>
