--- a/public/modules/core/views/home.client.view.html
+++ b/public/modules/core/views/home.client.view.html
@@ -2,7 +2,8 @@
 	<div class="jumbotron text-center">
 		<div class="row">
 			<div class="col-md-6 col-md-offset-3 col-sm-6 col-sm-offset-3 col-xs-12">
-				<h1>That Local Sound! Logo</h1>
+				<h1>That Local Sound!</h1>
+				<h2><b>Where musicians find gigs, and vendors find local talent</b></h2>
 			</div>
 		</div>
 		<br>
@@ -11,22 +12,192 @@
 			</p>
 		</div>
 	</div>
-	<div>
-		<h1>This is where the carousel goes</h1>
-	</div>
+<!CAROUSEL>
+
+
+
+    <div class=carousel>
+
+  <ul class=panes>
+    <li>
+    <div class="desc">
+        <a href="/dsm19944/" class="btn"><span>VIEW 1</span></a>
+        <strong class="name">dsm19944</strong>
+        <p>Germantown</p>
+    </div>
+      <img src="http://cdn.bandmix.com/bandmix_us/media/524/524529/1015663-m.jpg" alt="">
+    </li>
+    <li>
+    <div class="desc">
+        <a href="/dsm19944/" class="btn"><span>VIEW 2</span></a>
+        <strong class="name">dsm19944</strong>
+        <p>Germantown</p>
+    </div>
+      <img src="http://cdn.bandmix.com/bandmix_us/media/524/524529/1015663-m.jpg" alt="">
+    </li>
+        <li>
+    <div class="desc">
+        <a href="/dsm19944/" class="btn"><span>VIEW 3</span></a>
+        <strong class="name">dsm19944</strong>
+        <p>Germantown</p>
+    </div>
+      <img src="http://cdn.bandmix.com/bandmix_us/media/524/524529/1015663-m.jpg" alt="">
+    </li>
+        <li>
+    <div class="desc">
+        <a href="/dsm19944/" class="btn"><span>VIEW 4</span></a>
+        <strong class="name">dsm19944</strong>
+        <p>Germantown</p>
+    </div>
+      <img src="http://cdn.bandmix.com/bandmix_us/media/524/524529/1015663-m.jpg" alt="">
+    </li>
+        <li>
+    <div class="desc">
+        <a href="/dsm19944/" class="btn"><span>VIEW 5</span></a>
+        <strong class="name">dsm19944</strong>
+        <p>Germantown</p>
+    </div>
+      <img src="http://cdn.bandmix.com/bandmix_us/media/524/524529/1015663-m.jpg" alt="">
+    </li>
+        <li>
+    <div class="desc">
+        <a href="/dsm19944/" class="btn"><span>VIEW 6</span></a>
+        <strong class="name">dsm19944</strong>
+        <p>Germantown</p>
+    </div>
+      <img src="http://cdn.bandmix.com/bandmix_us/media/524/524529/1015663-m.jpg" alt="">
+    </li>
+        <li>
+    <div class="desc">
+        <a href="/dsm19944/" class="btn"><span>VIEW 7</span></a>
+        <strong class="name">dsm19944</strong>
+        <p>Germantown</p>
+    </div>
+      <img src="http://cdn.bandmix.com/bandmix_us/media/524/524529/1015663-m.jpg" alt="">
+    </li>
+        <li>
+    <div class="desc">
+        <a href="/dsm19944/" class="btn"><span>VIEW 8</span></a>
+        <strong class="name">dsm19944</strong>
+        <p>Germantown</p>
+    </div>
+      <img src="http://cdn.bandmix.com/bandmix_us/media/524/524529/1015663-m.jpg" alt="">
+    </li>
+        <li>
+    <div class="desc">
+        <a href="/dsm19944/" class="btn"><span>VIEW 9</span></a>
+        <strong class="name">dsm19944</strong>
+        <p>Germantown</p>
+    </div>
+      <img src="http://cdn.bandmix.com/bandmix_us/media/524/524529/1015663-m.jpg" alt="">
+    </li>
+        <li>
+    <div class="desc">
+        <a href="/dsm19944/" class="btn"><span>VIEW 10</span></a>
+        <strong class="name">dsm19944</strong>
+        <p>Germantown</p>
+    </div>
+      <img src="http://cdn.bandmix.com/bandmix_us/media/524/524529/1015663-m.jpg" alt="">
+    </li>
+        <li>
+    <div class="desc">
+        <a href="/dsm19944/" class="btn"><span>VIEW 11</span></a>
+        <strong class="name">dsm19944</strong>
+        <p>Germantown</p>
+    </div>
+      <img src="http://cdn.bandmix.com/bandmix_us/media/524/524529/1015663-m.jpg" alt="">
+    </li>
+        <li>
+    <div class="desc">
+        <a href="/dsm19944/" class="btn"><span>VIEW 12</span></a>
+        <strong class="name">dsm19944</strong>
+        <p>Germantown</p>
+    </div>
+      <img src="http://cdn.bandmix.com/bandmix_us/media/524/524529/1015663-m.jpg" alt="">
+    </li>
+        <li>
+    <div class="desc">
+        <a href="/dsm19944/" class="btn"><span>VIEW 13</span></a>
+        <strong class="name">dsm19944</strong>
+        <p>Germantown</p>
+    </div>
+      <img src="http://cdn.bandmix.com/bandmix_us/media/524/524529/1015663-m.jpg" alt="">
+    </li>
+        <li>
+    <div class="desc">
+        <a href="/dsm19944/" class="btn"><span>VIEW 14</span></a>
+        <strong class="name">dsm19944</strong>
+        <p>Germantown</p>
+    </div>
+      <img src="http://cdn.bandmix.com/bandmix_us/media/524/524529/1015663-m.jpg" alt="">
+    </li>
+        <li>
+    <div class="desc">
+        <a href="/dsm19944/" class="btn"><span>VIEW 15</span></a>
+        <strong class="name">dsm19944</strong>
+        <p>Germantown</p>
+    </div>
+      <img src="http://cdn.bandmix.com/bandmix_us/media/524/524529/1015663-m.jpg" alt="">
+    </li>
+        <li>
+    <div class="desc">
+        <a href="/dsm19944/" class="btn"><span>VIEW 16</span></a>
+        <strong class="name">dsm19944</strong>
+        <p>Germantown</p>
+    </div>
+      <img src="http://cdn.bandmix.com/bandmix_us/media/524/524529/1015663-m.jpg" alt="">
+    </li>
+        <li>
+    <div class="desc">
+        <a href="/dsm19944/" class="btn"><span>VIEW 17</span></a>
+        <strong class="name">dsm19944</strong>
+        <p>Germantown</p>
+    </div>
+      <img src="http://cdn.bandmix.com/bandmix_us/media/524/524529/1015663-m.jpg" alt="">
+    </li>
+        <li>
+    <div class="desc">
+        <a href="/dsm19944/" class="btn"><span>VIEW 18</span></a>
+        <strong class="name">dsm19944</strong>
+        <p>Germantown</p>
+    </div>
+      <img src="http://cdn.bandmix.com/bandmix_us/media/524/524529/1015663-m.jpg" alt="">
+    </li>
+        <li>
+    <div class="desc">
+        <a href="/dsm19944/" class="btn"><span>VIEW 19</span></a>
+        <strong class="name">dsm19944</strong>
+        <p>Germantown</p>
+    </div>
+      <img src="http://cdn.bandmix.com/bandmix_us/media/524/524529/1015663-m.jpg" alt="">
+    </li>
+            <li>
+    <div class="desc">
+        <a href="/dsm19944/" class="btn"><span>VIEW 20</span></a>
+        <strong class="name">dsm19944</strong>
+        <p>Germantown</p>
+    </div>
+      <img src="http://cdn.bandmix.com/bandmix_us/media/524/524529/1015663-m.jpg" alt="">
+    </li>
+  </ul>
+
+</div>
+
+
+
 	<div class="row">
 			 <div class="col-md-4 text-center">
-				<img src="http://placehold.it/140x140" class="avatar img-circle" alt="avatar">
+				<!img src="http://placehold.it/140x140" class="avatar img-circle" alt="avatar">
 				<h6>This is a local feature event</h6>
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis ipsa culpa doloribus perferendis repudiandae, hic, explicabo iusto labore eveniet, eaque aspernatur placeat temporibus maiores sint ipsum odio obcaecati reprehenderit ex.</p>
 			</div>
 			<div class="col-md-4 text-center">
-			<img src="http://placehold.it/140x140" class="avatar img-circle" alt="avatar">
+			<!img src="http://placehold.it/140x140" class="avatar img-circle" alt="avatar">
 			<h6>This is a local feature event</h6>
 			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis ipsa culpa doloribus perferendis repudiandae, hic, explicabo iusto labore eveniet, eaque aspernatur placeat temporibus maiores sint ipsum odio obcaecati reprehenderit ex.</p>
 		</div>
 		<div class="col-md-4 text-center">
-		<img src="http://placehold.it/140x140" class="avatar img-circle" alt="avatar">
+		<!img src="http://placehold.it/140x140" class="avatar img-circle" alt="avatar">
 		<h6>This is a local feature event</h6>
 		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis ipsa culpa doloribus perferendis repudiandae, hic, explicabo iusto labore eveniet, eaque aspernatur placeat temporibus maiores sint ipsum odio obcaecati reprehenderit ex.</p>
 	</div>
