got working dashboard

--- a/app/views/layout.server.view.html
+++ b/app/views/layout.server.view.html
@@ -30,7 +30,10 @@
 	<![endif]-->
 </head>
 <header data-ng-include="'/modules/core/views/header.client.view.html'" class="navbar navbar-fixed-top navbar-inverse">
-	</header>
+</header>
+
+<div data-ng-include="'/modules/users/views/dashboard/dashboard.client.view.html'" >
+</div>
 
 <body class="ng-cloak">
 	<section class="content">
