--- a/public/modules/users/views/dashboard/dashboard.client.view.html
+++ b/public/modules/users/views/dashboard/dashboard.client.view.html
@@ -1,12 +1,12 @@
- <div id="wrapper">
-   <!-- Sidebar -->
-   <div id="sidebar-wrapper">
+ <div id="wrapper" data-ng-controller="HeaderController">
+
+   <div class="sidebar-brand" data-ng-show="authentication.user" id="sidebar-wrapper">
      <ul class="sidebar-nav">
-       <li class="sidebar-brand">
-         <a ui-sref='profile'>Edit Profile</a>
+       <li>
+         <a href='/#!/settings/profile'>Edit Profile</a>
         </li>
         <li>
-          <a href="#">Overview</a>
+          <a href='/#!/browse/'>Overview</a>
         </li>
         <li>
           <a href="#">Events</a>
@@ -22,22 +22,4 @@
         </li>
       </ul>
     </div>
-    <!-- /#sidebar-wrapper -->
-
-    <!-- Page Content -->
-    <!-- partial entry way here. -->
-    <div id="page-content-wrapper">
-      <div class="container-fluid">
-        <div class="row">
-          <div class="col-lg-12">
-              <section ui-view></section>
-
-<!--             Create partial view here. it will be contianed if created here.
- -->          </div>
-        </div>
-      </div>
-    </div>
-    <!-- /#page-content-wrapper -->
-
   </div>
-  <!-- /#wrapper -->
