--- a/public/modules/users/views/dashboard/dashboard.client.view.html
+++ b/public/modules/users/views/dashboard/dashboard.client.view.html
@@ -1,25 +1,26 @@
- <div id="wrapper" data-ng-controller="HeaderController">
+<!--  <div id="wrapper" data-ng-controller="HeaderController">
 
-   <div class="sidebar-brand" data-ng-show="authentication.user" id="sidebar-wrapper">
-     <ul class="sidebar-nav">
+  <div class="sidebar-brand" data-ng-show="authentication.user" id="sidebar-wrapper">
+    <ul class="sidebar-nav">
+      <li>
+        <a href='/#!/settings/profile'>Edit Profile</a>
+       </li>
        <li>
-         <a href='/#!/settings/profile'>Edit Profile</a>
-        </li>
-        <li>
-          <a href='/#!/browse/'>Overview</a>
-        </li>
-        <li>
-          <a href="#">Events</a>
-        </li>
-        <li>
-          <a href="#">About</a>
-        </li>
-        <li>
-          <a href="#">Services</a>
-        </li>
-        <li>
-          <a href="#">Contact</a>
-        </li>
-      </ul>
-    </div>
-  </div>
+         <a href='/#!/browse/'>Overview</a>
+       </li>
+       <li>
+         <a href="#">Events</a>
+       </li>
+       <li>
+         <a href="#">About</a>
+       </li>
+       <li>
+         <a href="#">Services</a>
+       </li>
+       <li>
+         <a href="#">Contact</a>
+       </li>
+     </ul>
+   </div>
+ </div>
+-->
