--- a/public/modules/browse/views/userProfile.client.view.html
+++ b/public/modules/browse/views/userProfile.client.view.html
@@ -1,5 +1,5 @@
-<section data-ng-controller="BrowseController" data-ng-init="findOne()"/>
-<h1>{{artist.displayName}}</h1>
+<section data-ng-controller="BrowseController" data-ng-init="findOne()">
+<h1 data-ng-bind="artist.displayName"></h1>
 <h1><a href="#!/browse/">&laquo; Back to Search</h1>
 
 
