started working on the requests

--- a/public/modules/users/views/dashboard/dashboard.client.view.html
+++ b/public/modules/users/views/dashboard/dashboard.client.view.html
@@ -5,13 +5,10 @@
         <a ui-sref="dashboard.profile">Edit Profile</a>
        </li>
        <li>
-         <a ui-sref="browse">Overview</a>
+         <a ui-sref="dashboard.listRequests">Requests</a>
        </li>
        <li>
-         <a ui-sref="dashboard.gigs">Gigs</a>
-       </li>
-       <li>
-         <a href="#">About</a>
+         <a href="#">Gigs</a>
        </li>
        <li>
          <a href="#">Services</a>
