got the reqeust to kind of work so far.

--- a/public/modules/browse/views/browse.client.view.html
+++ b/public/modules/browse/views/browse.client.view.html
@@ -38,9 +38,9 @@ Browse musicians in your area and contact them to set up events for them to perf
             <h1>{{artist.stageName}}</h1>
 	    <h2>{{artist.displayName}}</h2>
       <h3>{{artist.email}}</h3>
-      
+      {{artist.genre}}<br>
 	    </div>
-            <div style="float:right;width:50%;">{{artist.city}},{{artist.state}}<br>
+            <div style="float:right;width:50%;">{{artist.city}}, {{artist.state}}<br>
 		{{artist.genre}}
 		</div>
           </div>
