--- a/public/modules/core/views/header.client.view.html
+++ b/public/modules/core/views/header.client.view.html
@@ -17,7 +17,7 @@
 			</ul>
 			<ul class="nav navbar-nav navbar-right" data-ng-show="authentication.user">
 				<li><a href="/#!/browse/">Browse</a></li>
-				<li><a  href="/#!/dashboard/">Dashboard</a></li>
+				<li><a  href="/#!/dashboard//profile">Dashboard</a></li>
 				<li><a href="/auth/signout">Sign-out</a></li>
 			</ul>
 		</nav>
