--- a/public/modules/core/views/home.client.view.html
+++ b/public/modules/core/views/home.client.view.html
@@ -23,161 +23,140 @@
     <div class="desc">
         <a href="/dsm19944/" class="btn"><span>VIEW 1</span></a>
         <strong class="name">dsm19944</strong>
-        <p>Germantown</p>
     </div>
-      <img src="http://cdn.bandmix.com/bandmix_us/media/524/524529/1015663-m.jpg" alt="">
+      <img src="http://placehold.it/140x140" alt="">
     </li>
     <li>
     <div class="desc">
         <a href="/dsm19944/" class="btn"><span>VIEW 2</span></a>
         <strong class="name">dsm19944</strong>
-        <p>Germantown</p>
-    </div>
-      <img src="http://cdn.bandmix.com/bandmix_us/media/524/524529/1015663-m.jpg" alt="">
+      <img src="http://placehold.it/140x140" alt="">
     </li>
         <li>
     <div class="desc">
         <a href="/dsm19944/" class="btn"><span>VIEW 3</span></a>
         <strong class="name">dsm19944</strong>
-        <p>Germantown</p>
     </div>
-      <img src="http://cdn.bandmix.com/bandmix_us/media/524/524529/1015663-m.jpg" alt="">
+      <img src="http://placehold.it/140x140" alt="">
     </li>
         <li>
     <div class="desc">
         <a href="/dsm19944/" class="btn"><span>VIEW 4</span></a>
         <strong class="name">dsm19944</strong>
-        <p>Germantown</p>
     </div>
-      <img src="http://cdn.bandmix.com/bandmix_us/media/524/524529/1015663-m.jpg" alt="">
+      <img src="http://placehold.it/140x140" alt="">
     </li>
         <li>
     <div class="desc">
         <a href="/dsm19944/" class="btn"><span>VIEW 5</span></a>
         <strong class="name">dsm19944</strong>
-        <p>Germantown</p>
     </div>
-      <img src="http://cdn.bandmix.com/bandmix_us/media/524/524529/1015663-m.jpg" alt="">
+      <img src="http://placehold.it/140x140" alt="">
     </li>
         <li>
     <div class="desc">
         <a href="/dsm19944/" class="btn"><span>VIEW 6</span></a>
         <strong class="name">dsm19944</strong>
-        <p>Germantown</p>
     </div>
-      <img src="http://cdn.bandmix.com/bandmix_us/media/524/524529/1015663-m.jpg" alt="">
+      <img src="http://placehold.it/140x140" alt="">
     </li>
         <li>
     <div class="desc">
         <a href="/dsm19944/" class="btn"><span>VIEW 7</span></a>
         <strong class="name">dsm19944</strong>
-        <p>Germantown</p>
     </div>
-      <img src="http://cdn.bandmix.com/bandmix_us/media/524/524529/1015663-m.jpg" alt="">
+      <img src="http://placehold.it/140x140" alt="">
     </li>
         <li>
     <div class="desc">
         <a href="/dsm19944/" class="btn"><span>VIEW 8</span></a>
         <strong class="name">dsm19944</strong>
-        <p>Germantown</p>
     </div>
-      <img src="http://cdn.bandmix.com/bandmix_us/media/524/524529/1015663-m.jpg" alt="">
+      <img src="http://placehold.it/140x140" alt="">
     </li>
         <li>
     <div class="desc">
         <a href="/dsm19944/" class="btn"><span>VIEW 9</span></a>
         <strong class="name">dsm19944</strong>
-        <p>Germantown</p>
     </div>
-      <img src="http://cdn.bandmix.com/bandmix_us/media/524/524529/1015663-m.jpg" alt="">
+      <img src="http://placehold.it/140x140" alt="">
     </li>
         <li>
     <div class="desc">
         <a href="/dsm19944/" class="btn"><span>VIEW 10</span></a>
         <strong class="name">dsm19944</strong>
-        <p>Germantown</p>
     </div>
-      <img src="http://cdn.bandmix.com/bandmix_us/media/524/524529/1015663-m.jpg" alt="">
+      <img src="http://placehold.it/140x140" alt="">
     </li>
         <li>
     <div class="desc">
         <a href="/dsm19944/" class="btn"><span>VIEW 11</span></a>
         <strong class="name">dsm19944</strong>
-        <p>Germantown</p>
     </div>
-      <img src="http://cdn.bandmix.com/bandmix_us/media/524/524529/1015663-m.jpg" alt="">
+      <img src="http://placehold.it/140x140" alt="">
     </li>
         <li>
     <div class="desc">
         <a href="/dsm19944/" class="btn"><span>VIEW 12</span></a>
         <strong class="name">dsm19944</strong>
-        <p>Germantown</p>
     </div>
-      <img src="http://cdn.bandmix.com/bandmix_us/media/524/524529/1015663-m.jpg" alt="">
+      <img src="http://placehold.it/140x140" alt="">
     </li>
         <li>
     <div class="desc">
         <a href="/dsm19944/" class="btn"><span>VIEW 13</span></a>
         <strong class="name">dsm19944</strong>
-        <p>Germantown</p>
     </div>
-      <img src="http://cdn.bandmix.com/bandmix_us/media/524/524529/1015663-m.jpg" alt="">
+      <img src="http://placehold.it/140x140" alt="">
     </li>
         <li>
     <div class="desc">
         <a href="/dsm19944/" class="btn"><span>VIEW 14</span></a>
         <strong class="name">dsm19944</strong>
-        <p>Germantown</p>
     </div>
-      <img src="http://cdn.bandmix.com/bandmix_us/media/524/524529/1015663-m.jpg" alt="">
+      <img src="http://placehold.it/140x140" alt="">
     </li>
         <li>
     <div class="desc">
         <a href="/dsm19944/" class="btn"><span>VIEW 15</span></a>
         <strong class="name">dsm19944</strong>
-        <p>Germantown</p>
     </div>
-      <img src="http://cdn.bandmix.com/bandmix_us/media/524/524529/1015663-m.jpg" alt="">
+      <img src="http://placehold.it/140x140" alt="">
     </li>
         <li>
     <div class="desc">
         <a href="/dsm19944/" class="btn"><span>VIEW 16</span></a>
         <strong class="name">dsm19944</strong>
-        <p>Germantown</p>
     </div>
-      <img src="http://cdn.bandmix.com/bandmix_us/media/524/524529/1015663-m.jpg" alt="">
+      <img src="http://placehold.it/140x140" alt="">
     </li>
         <li>
     <div class="desc">
         <a href="/dsm19944/" class="btn"><span>VIEW 17</span></a>
         <strong class="name">dsm19944</strong>
-        <p>Germantown</p>
     </div>
-      <img src="http://cdn.bandmix.com/bandmix_us/media/524/524529/1015663-m.jpg" alt="">
+      <img src="http://placehold.it/140x140" alt="">
     </li>
         <li>
     <div class="desc">
         <a href="/dsm19944/" class="btn"><span>VIEW 18</span></a>
         <strong class="name">dsm19944</strong>
-        <p>Germantown</p>
     </div>
-      <img src="http://cdn.bandmix.com/bandmix_us/media/524/524529/1015663-m.jpg" alt="">
+      <img src="http://placehold.it/140x140" alt="">
     </li>
         <li>
     <div class="desc">
         <a href="/dsm19944/" class="btn"><span>VIEW 19</span></a>
         <strong class="name">dsm19944</strong>
-        <p>Germantown</p>
     </div>
-      <img src="http://cdn.bandmix.com/bandmix_us/media/524/524529/1015663-m.jpg" alt="">
+      <img src="http://placehold.it/140x140" alt="">
     </li>
             <li>
     <div class="desc">
         <a href="/dsm19944/" class="btn"><span>VIEW 20</span></a>
         <strong class="name">dsm19944</strong>
-        <p>Germantown</p>
     </div>
-      <img src="http://cdn.bandmix.com/bandmix_us/media/524/524529/1015663-m.jpg" alt="">
+      <img src="http://placehold.it/140x140" alt="">
     </li>
   </ul>
 
