--- a/public/modules/requests/views/create-request.client.view.html
+++ b/public/modules/requests/views/create-request.client.view.html
@@ -7,45 +7,45 @@
     <form class="form-horizontal" data-ng-submit="create()" novalidate>
       <fieldset>
         <div class="form-group">
-          <label class="control-label" for="name">Date of Gig</label>
           <div class="controls">
-            <input type="date" id="exampleInput" name="input" ng-model="value" placeholder="mm-dd-yyyy" min="2013-01-01" max="2013-12-31" required />
+          <label class="control-label" for="name">Date of Gig</label>
+
+            <input type="date" id="dateOfGig" name="input" data-ng-model="dateOfGig" placeholder="mm-dd-yyyy" min="2013-01-01" max="2013-12-31" required />
             <span class="error" ng-show="myForm.input.$error.required">
             Required!
             </span>
             <span class="error" ng-show="myForm.input.$error.date">
               Not a valid date!
             </span>
-          </div>
+
           <label class="control-label" for="name">Rehearsal-Time</label>
-          <div class="controls">
-            <input type="time" id="exampleInput" name="input" ng-model="value" placeholder="HH:mm:ss" min="2013-01-01" max="2013-12-31" required />
+
+            <input type="time" id="rehearsalTime" name="input" data-ng-model="rehearsalTime" placeholder="HH:mm:ss"  required />
             <span class="error" ng-show="myForm.input.$error.required">
               Required!</span>
               <span class="error" ng-show="myForm.input.$error.date">
                 Not a valid date!</span>
-          </div>
+
           <label class="control-label" for="name">Start-Time</label>
-          <div class="controls">
-            <input type="time" id="exampleInput" name="input" ng-model="value" placeholder="HH:mm:ss" min="2013-01-01" max="2013-12-31" required />
+
+            <input type="time" id="startTime" name="input" data-ng-model="startTime" placeholder="HH:mm:ss"  required />
             <span class="error" ng-show="myForm.input.$error.required">
             Required!</span>
             <span class="error" ng-show="myForm.input.$error.date">
             Not a valid date!</span>
-          </div>
+
           <label class="control-label" for="name">End-Time</label>
-          <div class="controls">
-            <input type="date" id="exampleInput" name="input" ng-model="value" placeholder="HH:mm:ss" min="2013-01-01" max="2013-12-31" required />
+
+            <input type="time" id="endTime" name="input" data-ng-model="endTime" placeholder="HH:mm:ss"  required />
             <span class="error" ng-show="myForm.input.$error.required">Required!</span>
-            <span class="error" ng-show="myForm.input.$error.date">Not a valid date!</span>
-          </div>
+
           <label class="control-label" for="name">Payment for Gig</label>
-          <div class="controls">
-            <input type="number" id="exampleInput" name="input" ng-model="value" placeholder="0.00" min="2013-01-01" max="2013-12-31" required />
+
+            <input type="number" id="amount" name="input" data-ng-model="amount" placeholder="0.00" required />
             <span class="error" ng-show="myForm.input.$error.required">Required!</span>
-            <span class="error" ng-show="myForm.input.$error.date">Not a valid date!</span>
-          </div>
+              <h1 data-ng-bind="artist._id" data-ng-model="toArtist" id="toArtist"></h1>
         </div>
+
         <div class="form-group">
           <input type="submit" class="btn btn-default">
         </div>
