--- a/public/modules/requests/views/list-requests.client.view.html
+++ b/public/modules/requests/views/list-requests.client.view.html
@@ -3,7 +3,7 @@
         <h1>Your Request Inbox</h1>
     </div>
     <div class="list-group">
-<!--       comeback and edit this
+<!-- ''      comeback and edit this
  -->        <a data-ng-repeat="request in requests" data-ng-href="#!/requests/{{request._id}}" class="list-group-item">
 			<small class="list-group-item-text">
 				Posted on
